clean up and fix contact endpoint issue
